still requires - projects and profile picture

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
@@ -49,7 +50,7 @@
                         GU323BG · 55 Noreuil Road · Petersfield, Hampshire · (+44) 7914 394052 ·
                         <a href="mailto:name@email.com">lukeperry144@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a driven and curious student at Durham University who is building a varied and technical skillset by exploring software solutions through personal projects.</p>
+                    <p class="lead mb-5">I am a motivated and inquisitive third-year integrated master's student at Durham University, actively expanding my technical skillset through diverse personal projects. With a strong interest in applying artificial intelligence to solve complex problems, I have excelled in my academic pursuits, achieving an average of 79% in AI-related university projects.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/luke-perry-318800221/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/LukePerry14"><i class="fab fa-github"></i></a>
@@ -66,7 +67,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Director and Full-Stack Developer</h3>
                             <div class="subheading mb-3">LRWB</div>
-                            <p>I co-created a small company (LRWB) to pursue a unique housing social media application oppoturnity - where I've built a fully functional (back and front end) alpha version currently in local testing.</p>
+                            <p>I co-founded a startup, LRWB, to develop an innovative housing social media application. I architected and implemented a fully functional alpha version using modern full-stack technologies, including Node.js, Flutter, and the Google developer service suite, which is currently in local testing. Leading this project from initial concept through to a working prototype has honed my skills in software development, system design, and agile methodologies, making me a more confident and independent developer with a strong grasp of the business implications of technical solutions.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2023 - Present</span></div>
                     </div>
@@ -74,7 +75,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Developer</h3>
                             <div class="subheading mb-3">IBM</div>
-                            <p>I worked in a SCRUM team of students to develop a prototype AR Learning application for deployment on mobile devices.</p>
+                            <p>I collaborated in a SCRUM team of students to develop a prototype AR learning application for mobile deployment. This experience allowed me to engage with a high-profile client and navigate a dynamic development environment. I leveraged technologies such as Unity and ARCore to manage the entire workflow, from requirement gathering to implementation, ensuring the delivery of a robust solution within a constrained timeframe. This project enhanced my expertise in agile development, cross-platform mobile development, and client-facing project management.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2023 - March 2022</span></div>
                     </div>
@@ -82,9 +83,44 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Warehouse Assistant</h3>
                             <div class="subheading mb-3">John Jenkins & Sons LTD</div>
-                            <p>Although non-technical, working with the warehouse team to manage the logistics </p>
+                            <p>Although non-technical, working with the warehouse team to manage the logistics of the warehouse was valuable experience of operating in a professional environment with a team to generate efficient solutions in efficient timeframes.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2021 - January 2022</span></div>
+                    </div>
+
+                </div>
+            </section>
+            <hr class="m-0" />
+            <section class="resume-section" id="projects">
+                <div class="resume-section-content">
+                    <h2 class="mb-3">Projects</h2>
+                    <p class="mb-5"> Find some notable projects I've worked on, with code avaiable on my github public repositories.</p>
+                    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                        <div class="col">
+                            <div class="card h-100 custom-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Project Title 1</h5>
+                                    <p class="card-text">Brief description of Project 1. This project involves ...</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100 custom-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Project Title 2</h5>
+                                    <p class="card-text">Brief description of Project 2. This project focuses on ...</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100 custom-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Project Title 3</h5>
+                                    <p class="card-text">Brief description of Project 3. The main goal of this project ...</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Add more project tiles as needed -->
                     </div>
 
                 </div>
@@ -166,8 +202,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>asdasdasdasdasd</p>
-                    <p class="mb-0">asdasdasdasdsd</p>
+                    <p>I have a number of special interests, such as: VR technology - where I have been an active member of development and user community, working with indie developers to develop successful projects such as Gorrila Tag, A2, Pavlov, etc. I am also a roleplaying and wargaming enthusiast, where I have a game group who run Warhammer matches and D&D Campaigns together. I love the creative and social outlet this provides for me.</p>
+                    <p class="mb-0">Physically, I grew up challenging myself on the Rugby pitch and later on in the gym. These communities have molded my interpersonnal values and my work philosophy.</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -178,13 +214,17 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Oxford University Computing Challenge (OUCC) Finalist
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Google Foobar Completionist
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             2
                             <sup>nd</sup>
-                            Lockheed Martin - Cyber Quest - 2020
+                            Lockheed Martin - Code Quest - 2020
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
