final first version

--- a/index.html
+++ b/index.html
@@ -99,27 +99,36 @@
                         <div class="col">
                             <div class="card h-100 custom-card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Project Title 1</h5>
-                                    <p class="card-text">Brief description of Project 1. This project involves ...</p>
+                                    <h5 class="card-title">Movein</h5>
+                                    <p class="card-text">A social media style app to optimise and gamify the house-mate finding experience to allow individuals and groups to express individuality to pair individuals and groups.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card h-100 custom-card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Project Title 2</h5>
-                                    <p class="card-text">Brief description of Project 2. This project focuses on ...</p>
+                                    <h5 class="card-title">AI Search - TSP</h5>
+                                    <p class="card-text">I use a modified Particle Swarm Optimisation and Simulated Annealling algorithm to efficiently generate heuristically optimal solutions to the Travelling Salesman Problem.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card h-100 custom-card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Project Title 3</h5>
-                                    <p class="card-text">Brief description of Project 3. The main goal of this project ...</p>
+                                    <h5 class="card-title">Shortest Vector Problem (C++)</h5>
+                                    <p class="card-text">I implemented a vector sieving solution that, while not asymptotically efficient, demonstrates practical efficiency compared to alternative methods for discovering minimal norm lattice points in non-standard high-dimensional vector spaces. This approach is particularly valuable in cryptography and computational geometry.</p>
                                 </div>
                             </div>
                         </div>
+                        <div class="col">
+                            <div class="card h-100 custom-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Regression Model for Wine Quality</h5>
+                                    <p class="card-text">I attempt to train a regression model on a wine component dataset with high multicolinearity to generate a hyper-solution-space to predict unseen high quality wine compositions.</p>
+                                </div>
+                            </div>
+                        </div>
+                        
                         <!-- Add more project tiles as needed -->
                     </div>
 
