--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-3">Experience</h2>
-                    <p class="mb-5"> As a full time student - I'm still looking for professional work to expand my build towards a career in tech.</p>
+                    <p class="mb-5"> As a full time student - I'm still looking for professional work to build towards a career in tech.</p>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Director and Full-Stack Developer</h3>
