--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <div class="card h-100 custom-card">
                                 <div class="card-body">
                                     <h5 class="card-title">GPT Style LLM Model</h5>
-                                    <p class="card-text">Developed a bigram language model using PyTorch, implementing tokenization, bigram probability calculation, and text generation to demonstrate foundational NLP concepts. Additionally, designed a GPT-style language model utilizing a Transformer architecture, incorporating self-attention mechanisms and positional encoding to generate coherent and contextually relevant text sequences, achieving state-of-the-art performance in language modeling tasks.</p>
+                                    <p class="card-text">Developed a bigram language model using PyTorch, implementing tokenization, bigram probability calculation, and text generation to demonstrate foundational NLP concepts. Additionally, designed a GPT-style language model utilizing a Transformer architecture, incorporating self-attention mechanisms and positional encoding, exploring state of the art text generation.</p>
                                 </div>
                             </div>
                         </div>
