added chess engine card

--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col">
+                            <div class="card h-100 custom-card">
+                                <div class="card-body">
+                                    <h5 class="card-title">C++ Chess Engine</h5>
+                                    <p class="card-text">Developed a high-performance C++ chess engine with efficient board representation, move generation, and evaluation functions. Implemented core architecture, minimax, and alpha-beta pruning algorithms. Implementation focused on optimal storage/ representation (bitboards) and computation - also explored optimisation through a combination of lock-free, lazy symettric multithreading, combined with a principle variation splitting method. Achieved significant ELO rating in online tests and integrated the engine with a CLI. Technologies used: C++, STL, Multithreading, Bitboards, Minimax Algorithm, Alpha-Beta Pruning</p>
+                                </div>
+                            </div>
+                        </div>
                         
                     </div>
 
