adjusted movein and AI search project descriptions

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <div class="card h-100 custom-card">
                                 <div class="card-body">
                                     <h5 class="card-title">Movein</h5>
-                                    <p class="card-text">A social media style app to optimise and gamify the house-mate finding experience to allow individuals and groups to express individuality to pair individuals and groups.</p>
+                                    <p class="card-text">A social media style app to optimise and gamify the house-mate finding experience to allow individuals and groups to express individuality to pair individuals and groups. I lead development for the full stack - working on frontend, backend, and business aspects of the project.</p>
                                 </div>
                             </div>
                         </div>
@@ -108,7 +108,7 @@
                             <div class="card h-100 custom-card">
                                 <div class="card-body">
                                     <h5 class="card-title">AI Search - TSP</h5>
-                                    <p class="card-text">I use a modified Particle Swarm Optimisation and Simulated Annealling algorithm to efficiently generate heuristically optimal solutions to the Travelling Salesman Problem.</p>
+                                    <p class="card-text">I use a modified Particle Swarm Optimisation and Simulated Annealling algorithm to efficiently generate heuristically optimal solutions to the Travelling Salesman Problem. This required developing and optimising a pseudo-spatial encoding of tours to allow for tour 'proximities'(similarities) and velocities.</p>
                                 </div>
                             </div>
                         </div>
