--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-3">Experience</h2>
-                    <p class="mb-5">Find reference contact details at the bottom of the section.<br><br></p>
+                    <h1 class="mb-6">Experience</h1>
+
             
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h2 class="mb-0">LSEG (London Stock Exchange Group)</h3>
                             <div class="subheading mb-3">Developer and Prospect</div>
-                            <p>Mentored in <b>Quantative Finance</b> under Dr. Haykaz Aramyan and Jason Ramchandani to develop practical <b>finance analysis tools</b> used by quant traders/ developers accessing the London Stock Exchange financial data broker. Studied under Dr Marios Skevofylakas experimenting with cutting-edge <b>LLM PEFT (Parameter Efficient Fine-Tuning)</b> methods to create tailored customer assistants for the LSEG Developer Portal.</p>
-                            <p class="text-primary">References:</p>
+                            <p>Mentored in <b>Quantative Finance</b> under Dr. Haykaz Aramyan and Jason Ramchandani to develop bespoke <b>finance analysis tools</b> for quant traders/ developers accessing the London Stock Exchange financial data through the LSEG workspace suite. Also studied under Dr Marios Skevofylakas experimenting with cutting-edge <b>LLM PEFT (Parameter Efficient Fine-Tuning)</b> methods to create tailored customer assistants for the LSEG Developer Portal. We also conducted research into <b>Agentic AI</b> systems, exploring the latest advancements in this area.</p>
+                            <p class="text-primary"><b>References:</b></p>
                             <p><a href="https://www.linkedin.com/in/haykaz-aramyan-phd">Dr. Haykaz Aramyan</a>, 
                                <a href="https://www.linkedin.com/in/jason-ramchandani">Jason Ramchandani</a>, 
                                <a href="https://www.linkedin.com/in/marios-skevofylakas">Dr. Marios Skevofylakas</a>
@@ -104,7 +104,7 @@
                             <h2 class="mb-0">IBM</h3>
                             <div class="subheading mb-3">Developer</div>
                             <p><b>Collaborated</b> in a <b>SCRUM team</b> of peers to develop an <b>Experimental</b> prototype AR learning application for mobile deployment. Engaged with a <b>high-profile client</b>, navigating a dynamic, <b>agile</b> development environment to satisfy client needs. The project required <b>Independent</b> learning and leveraging of modern AR systems, while exercising <b>client-facing</b> project management skills.</p>
-                            <p class="text-primary">References:</p>
+                            <p class="text-primary"><b>References:</b></p>
                             <p><a href="https://www.linkedin.com/in/jonmcnamara/">Jon Mc Namara</a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2023 - March 2022</span></div>
@@ -115,7 +115,7 @@
                             <h2 class="mb-0">John Jenkins & Sons Ltd.</h3>
                             <div class="subheading mb-3">Warehouse Assistant</div>
                             <p>Although non-technical, worked with the warehouse team in a <b>professional environment</b> to manage the <b>logistics</b> of the warehouse with efficient, 'on the fly' solutions meeting <b>stringent deadlines</b>.</p>
-                            <p class="text-primary">References:</p>
+                            <p class="text-primary"><b>References:</b></p>
                             <p><a href="https://www.johnjenkins.co.uk/">John Jenkins & Sons Ltd.</a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2021 - January 2022</span></div>
@@ -138,7 +138,7 @@
             <hr class="m-0" />
             <section class="resume-section-projects" id="projects">
                 <div class="resume-section-content">
-                    <h2 class="mb-3">Projects</h2>
+                    <h1 class="mb-3">Projects</h1>
                     <p class="mb-5"> Some notable independent projects I've worked on - code avaiable on my github public repositories.</p>
                     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                         <div class="col">
@@ -214,7 +214,7 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
+                    <h1 class="mb-5">Education</h1>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Durham</h3>
@@ -243,8 +243,27 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
+                    <h1 class="mb-5">Skills</h1>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <ul class="dev-icons-text">
+                        <li>Python</li>
+                        <li>Java</li>
+                        <li>C</li>
+                        <li>C++</li>
+                        <li>C#</li>
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                        <li>JavaScript</li>
+                        <li>React</li>
+                        <li>Node.js</li>
+                        <li>npm</li>
+                        <li>Haskell</li>
+                        <li>Database</li>
+                        <li>Ubuntu</li>
+                        <li>Git</li>
+                        <li>Unity</li>
+                        <li>Flutter</li>
+                    </ul>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
                         <li class="list-inline-item"><i class="fab fa-java"></i></li>
@@ -286,7 +305,7 @@
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
+                    <h1 class="mb-5">Interests</h1>
                     
                     <div class="interest-item mb-4">
                         <h3 class="mb-2">Philosphy and Ethics</h3>
@@ -315,7 +334,7 @@
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h1 class="mb-5">Awards & Certifications</h1>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
